<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.samuelgespass.madlibs.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="Mad Libs!"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textColor="@color/colorTextIcons"
        android:textSize="60sp"
        android:textStyle="bold"
        android:id="@+id/appNameTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter words below"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:textColor="@color/colorPrimaryText"
        android:textSize="30sp"
        android:textStyle="bold"
        android:id="@+id/appBodyTextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@id/appBodyTextView"
        android:hint="noun"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appBodyTextView"
        android:layout_toRightOf="@id/editText"
        android:id="@+id/editText0"
        android:hint="verb"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText1"
        android:layout_toRightOf="@id/editText0"
        android:layout_below="@id/appBodyTextView"
        android:hint="plural noun"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_toRightOf="@id/editText1"
        android:layout_below="@id/appBodyTextView"
        android:hint="noun"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:id="@+id/button"
        android:hint="GO!"/>
</RelativeLayout>
